# tryy

./: .gitignore  CMakeLists.txt  README.md  atm.java  bank.java  file.java  login.css  login.html  register.html  style.css
pybind/: CMakeLists.txt  pybind_ops.cpp  pybind_ops.py
pytest_op/: pytest_ops.py
src/: CMakeLists.txt  custom_minimum.cpp  custom_minimum.h
tests/: CMakeLists.txt  test_minimum.cpp
